[package]
name = "esp-weather-rw-no-std"
version = "0.1.0"
authors = ["leomanchic <perleomix@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"


[dependencies]
hal             = { package = "esp32-hal", version = "0.16.0" }
esp-backtrace   = { version = "0.9.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println     = { version = "0.7.1", features = ["esp32", "log"] }
esp-wifi        = { version = "0.1.1", features = ["esp32", "wifi-logs", "wifi"] }
smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
#embedded-io = "0.6.1"
heapless = { version = "0.7.16", default-features = false }
embedded-graphics = "0.8.1"
ssd1306 = "0.8.4"
ntp-nostd = "0.0.1"
chrono = {version = "0.4.31",default-features = false }


# This is necessary in order for WIFI to work
[profile.dev.package.esp-wifi]
opt-level = 3
[profile.release]
opt-level = 3
lto="off"
